--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -1,6 +1,6 @@
-<nav class="site-nav">
-  <a href="{{ site.baseurl }}/">Home</a>
-  <a href="{{ site.baseurl }}/architecture/">Architecture</a>
+<nav style="margin-bottom: 1.5rem;">
+  <a href="{{ site.baseurl }}/">Home</a> |
+  <a href="{{ site.baseurl }}/architecture/">Architecture</a> |
+  <a href="{{ site.baseurl }}/tags/">Tags</a> |
   <a href="{{ site.baseurl }}/about/">About</a>
-  <a href="{{ site.baseurl }}/tags/">Tags</a>
 </nav>
